fixed my spacing mistake, added drop shadow to calendar

--- a/frontend/src/components/Calendar.css
+++ b/frontend/src/components/Calendar.css
@@ -21,7 +21,7 @@ body {
 /* Toolbar */
 .toolbar {
     display: flex;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     align-items: center;
     justify-content: center;
     position: relative;
@@ -124,10 +124,11 @@ body {
 }
 
 .calendar_default_main{
-    height: 90% !important;
+    height: 570px !important;
     background: rgb(255, 255, 255);
     border: 0px solid rgb(192, 192, 192);
     border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
 }
 
 .calendar_default_cell_inner {
