--- a/frontend/src/themes/modal_custom.css
+++ b/frontend/src/themes/modal_custom.css
@@ -15,7 +15,6 @@
     width: 100%;
     gap: 20px;
     position: fixed;
-    transform: translate(0%, 60%);
 }
 
 .modal_custom_content {
